--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -172,6 +172,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Classes\Hash.cs" />
     <Compile Include="Controllers\GatheringController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
@@ -194,9 +195,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\add_user.png" />
     <Content Include="Images\admin.png" />
     <Content Include="Images\at.png" />
     <Content Include="Images\birthday.png" />
+    <Content Include="Images\door.png" />
     <Content Include="Images\facebook.png" />
     <Content Include="Images\instagram.png" />
     <Content Include="Images\login.png" />
