--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -61,6 +61,7 @@
     <Reference Include="Npgsql, Version=5.0.4.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>packages\Npgsql.5.0.4\lib\netstandard2.0\Npgsql.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="Stripe.net, Version=39.44.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Stripe.net.39.44.0\lib\net461\Stripe.net.dll</HintPath>
     </Reference>
