Nowy wyglad po zalogowaniu, przyciski jeszcze nie podpięte

--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -201,8 +201,11 @@
     <Content Include="Images\admin.png" />
     <Content Include="Images\at.png" />
     <Content Include="Images\birthday.png" />
+    <Content Include="Images\computer.jpg" />
     <Content Include="Images\door.png" />
     <Content Include="Images\facebook.png" />
+    <Content Include="Images\football.jpg" />
+    <Content Include="Images\group.jpg" />
     <Content Include="Images\instagram.png" />
     <Content Include="Images\login.png" />
     <Content Include="Images\logo-prezentomat.png" />
@@ -247,6 +250,7 @@
     <Content Include="Views\User\Regist.cshtml" />
     <Content Include="Views\Shared\_LayoutUser.cshtml" />
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
+    <Content Include="Views\User\collection.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
