--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -289,6 +289,7 @@
     <Content Include="scss\_screen-reader.scss" />
     <Content Include="scss\_stacked.scss" />
     <Content Include="scss\_variables.scss" />
+    <Content Include="Views\User\AddCash.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
