dodawanie usuwanie osob do zbiurki i poprawa detali w szczegolach zbiorki

--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="CustomAuthorize.cs" />
     <Compile Include="DataContext\ApplicationDbContext.cs" />
+    <Compile Include="Models\AddUserOfGathering.cs" />
     <Compile Include="Models\PayoffHistoryClass.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
