--- a/Prezentomat.csproj
+++ b/Prezentomat.csproj
@@ -207,19 +207,27 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\a.jpg" />
     <Content Include="Images\add_user.png" />
     <Content Include="Images\admin.png" />
     <Content Include="Images\at.png" />
     <Content Include="Images\birthday.png" />
+    <Content Include="Images\c.jpg" />
     <Content Include="Images\cash.png" />
+    <Content Include="Images\computer.jpg" />
+    <Content Include="Images\d.jpg" />
     <Content Include="Images\data.png" />
     <Content Include="Images\door.png" />
+    <Content Include="Images\f.jpg" />
     <Content Include="Images\facebook.png" />
+    <Content Include="Images\i.jpg" />
     <Content Include="Images\instagram.png" />
+    <Content Include="Images\j.jpg" />
     <Content Include="Images\login.png" />
     <Content Include="Images\logo-prezentomat.png" />
     <Content Include="Images\name.png" />
     <Content Include="Images\padlock.png" />
+    <Content Include="Images\phone.jpg" />
     <Content Include="Images\registration.png" />
     <Content Include="Images\twitter.png" />
     <Content Include="Images\youtube.png" />
